--- a/card.css
+++ b/card.css
@@ -19,6 +19,6 @@
   }
   .card {
     width: 220px; height: 310px;
-    background-image: url(/image/yugioh.webp);
+    background-image: url(/image/admasia.webp);
     background-size: cover;
   }
